[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/Panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/SimpleInput.gd" type="Script" id=2]
[ext_resource path="res://ArtSketeches/Panel.png" type="Texture" id=3]
[ext_resource path="res://ArtSketeches/okbtn.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.0297546, 0.0585437, 0.292969, 1 )
draw_center = true
border_width_left = 1
border_width_top = 1
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.0949402, 0.206329, 0.714844, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border" ]

[node name="SimpleInput" instance=ExtResource( 1 )]

margin_right = 388.0
margin_bottom = 74.0
script = ExtResource( 2 )

[node name="Msg" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="InputArea" type="NinePatchRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_top = 95.0
margin_right = 322.0
margin_bottom = 153.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
_sections_unfolded = [ "Patch Margin" ]

[node name="TextEdit" type="TextEdit" parent="InputArea" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 115.0
margin_top = 13.0
margin_right = 262.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 1 )
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = false
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = true
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "Caret", "custom_styles" ]

[node name="Label" type="Label" parent="InputArea" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 15.0
margin_right = 102.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OKBtn" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 352.0
margin_top = 100.0
margin_right = 392.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[connection signal="text_changed" from="InputArea/TextEdit" to="." method="_on_TextEdit_text_changed"]

[connection signal="pressed" from="OKBtn" to="." method="_on_OKBtn_pressed"]


